More work on the thrust slides.

--- a/cuda_easy/_thrust.tex
+++ b/cuda_easy/_thrust.tex
@@ -1,9 +1,15 @@
 \begin{frame}
-  \frametitle{CUDA Generics}
-  We talked about generic algorithms, what if we could drop in
-  replacement algorithms to take advantage of available hardware?
+  \frametitle{Thrust}
+  So how can Thrust help us write CUDA capable code? \\
+  \pause
+  The Thrust library provides replacements for STL containers and
+  algorithms.
+  \pause
   \begin{itemize}
-    \item What here...
+    \item vector
+    \item transform
+    \item copy
+    \item etc
   \end{itemize}
 \end{frame}
 
